--- a/provision/ansible/inventory/host_vars/k3s-master-01.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-master-01.sops.yml
@@ -1,23 +1,23 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:c3U=,iv:V9pS2CaD3YjoFqMgSKC+edS1/kRacEI1bPULYewueHo=,tag:wi+aYSfWN3hKYwPfaevr9g==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:NSL3EQqCmfe7lNwQCHw=,iv:UPWgFC2TaSmMylHv2HsChlqpoTi4czibhvm55jx1iPk=,tag:0yLaEDSrueGgZ82iXwnCHg==,type:str]
+ansible_user: ENC[AES256_GCM,data:oHM=,iv:WspRb0oTLF67vJ1c5LGTAWyKeXeGGZqKIXZfK5XXz1c=,tag:OiO4DwrMwq2JQtksADaHhg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:4RKW4zE4t3b+4Zqpup0=,iv:uuX37EdUcKSv05V7jUaYxObEcrmDJrmOwdC1kswzW24=,tag:IymGJ71u34uQvaq12M7lmA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age1vd5j7kge9c8w8t3aj3ekk4gp98fxhaqaptj224yl9aq3nekns30qneex5d
+        - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzcGk1RHFXdkpuTCtxZHg5
-            UGtUYXFLc1hwYVdWd0ZVcnFFMlBjY1BrUFJjCm81WU9GRXpqTWlLQVRtREcvVCtW
-            VUluN3F4WE0rc0FuMGk1UFVkenZWcXMKLS0tIE83TG5mcGh3NDAycDZkZnlXcGlk
-            SjNaVWV0Tk85TGpraDc3blFFem1WRDAKmpy1zo72jWdDePf3WTht/7tRa2Iz4IMs
-            2Tpk/dM9vXJURkwNjgXxBS72wws2dkR9uJjetetFt8uAOn+IN0bPug==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwL25GNmNVcmgxRnB6UVZS
+            azIzL0RJT1NQLzRNODQwbVRkZWUzM29UVW1VCkhIdjJydkNmSXZ5SC9IOVF0QU1t
+            SXpOZU9aSkg2cXpGc3FkKys0TVVmb28KLS0tIDd4NVBEdmlYZVBibDRZc2lJeWhD
+            NGRYOEZLSlN5WWNZN2xCWnMrYVhIZ3cKcosMXJv5mLE0vtf6iQ1EpHFIaTbr333G
+            U/KSj6s17H7NtTtBBPIRiFtvqIGjCzzhOAtg87rm07NJPuiXYpObBg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-05T23:53:05Z"
-    mac: ENC[AES256_GCM,data:lEp4wFuFGwFP/bzRr5YqB1l0GOSMYZOCaFIog7H+cVMH87thjPTo43AWQRCXLsesCLDlnY8Il022mvvo/nmN176U1JMvutW3Ia9UFmrRiTRgLJEmlIv2wIWF00TT/SsgHAFc8uv+7DSOa0ZhtxB8AVadKJ+TVrUQIuIPS+7DsRY=,iv:UhcU/FUPYKB6Czl4fM7YNrm5YJHvha90wsKVEk3bM4I=,tag:Iz6qLikXG1yYCXoU+PJXJA==,type:str]
+    lastmodified: "2022-06-09T18:55:22Z"
+    mac: ENC[AES256_GCM,data:sZaEBfNSSdz99RTIahaQ0sXNxDDfSiQIVg3O/tX7hB0VNRe3H8o5vjx3CV/jvUNvPpt8ZjEWed7q6YJ0s1DKvm2Ao6YbGr0ZTua3tEHf+axZ5ggIyXJDtjXVQWkDvL1Akd3dnzKQp5fa1UkTLM0W6xGC/y9avYftX/qyU3VwU28=,iv:UlXdtraB2tmmZLSphNqNPWRvKhboI/VztPl/pL9j8RA=,tag:qMzYe7JgAj8Zoqf1UiaYoA==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
