--- a/provision/ansible/inventory/host_vars/k3s-worker-01.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-worker-01.sops.yml
@@ -1,23 +1,23 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:wr8=,iv:jbgSo5wGDNlKrqnBhCYHn0lDk/Q1xQR5U3DWDmswrGo=,tag:z9TP13bcEBjSO9NJcJfP4Q==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:j8sT5iJn6iOW226fxxs=,iv:5uEDrRkx+bjBdN4kytjVhfARrWtwVAXJlX2BENJB1mA=,tag:iTXTgXE2t+6e8vrImPDl8A==,type:str]
+ansible_user: ENC[AES256_GCM,data:g3Q=,iv:YqYfDslLGR7VbTSFlpDmLfPOwnaOKTsJpNpLgYztb10=,tag:pXEPsBCn/7tIVEptiYVqqQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:p7K+GWjSEcAsKvcR0U0=,iv:iTDo5FSNH0ehtSi1GoNGmpKXRkaoruKMPnWev6OkyCE=,tag:4I8KVC7CiXipmU6aol6s7A==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age1vd5j7kge9c8w8t3aj3ekk4gp98fxhaqaptj224yl9aq3nekns30qneex5d
+        - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPdjRTVUtJMFUxdFUvaFhk
-            US93cmdkL283eGdrVEZ4OGtpdVE5Y05NbUZVCmY4ZEdwN1RJU3BKVUQrL01BMHQv
-            eVdSZStWVUlnL2Z5NGZRVzBodXk4Q3cKLS0tIDJkNmNTSE15anNkYVBZcW1TdVBX
-            WkUxTUlxNExyaUhSKzBvUzlkWnl2NkkKorxSUpQm+sH1ZR7HFaumekK6W+htGf6d
-            UcQgriy64a9kVm6H16K6KZt3cjjmb6J5t4UvodibDMRzaHKw6CJi9g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsbTZiQ3dENFlVNzJMZGMw
+            N2VLK1RlNzU3K3hTNjdTZmtKZVlMQlltemdJClJmTnNuT0EyeFhKNmhzYjAxZDEz
+            WVRRNWlQaWw0L3V5UVZudHlocUNVUlkKLS0tIFVFb2tsa21YZ0h0NmorSkFWRzRH
+            c3VCOUhwWGlqMzA5M1JQYVZ3OUNWbmsKFZwiPleeIDwLOVB2DrylY5QQd8VnUkxt
+            bv9xk3D1aFW0g+UNzdlmRDrMqTenvrEss8xWdLGqcReIRVi30RPnsA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-05T23:53:05Z"
-    mac: ENC[AES256_GCM,data:3t3ZAxKN+Z0LiPiXhA1SbkkZlJLqS9TGw+WufBBwgactaY1+sYwfYZYOhqPtLyumk/1SUxqdEbIC8Z1LkN6xRXLDX4JIjqeikKS/KB1wrqZYM35MkvBs9Dl0Shlk38Lw1f7F+lhGIww1sKQSaJxiFbkA+EQ5DulpIGe9YU/xfx0=,iv:4/exAG+Ywyu+2Lt47VeOYruQlTg918MYNBvzcH8xKtQ=,tag:vsDI+Zx0U8D/8QB4USF0+w==,type:str]
+    lastmodified: "2022-06-09T18:55:22Z"
+    mac: ENC[AES256_GCM,data:ndD2OF8pPhzQBEF8Ys3F7hx6asB0H1/lz0KJi9bBYN9tkjYp7Q0vm+e593qDf5BQ/Ou+ray7rPWN7zmB4SbiTWsTnG2iSxUGLsEBdDS7ortqWnLVIBCEd7hbJhpZ9vbB3QpDLrJiEOSQC5z/chSpNo73BbZSIypiP4wC5mRSOJg=,iv:d3qxq2VCKdDhqqwenG87j9e+8cleOLlyXf5vBB3vERE=,tag:064nFIw4zm2OkXrKKQxV0A==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
