--- a/provision/ansible/inventory/host_vars/k3s-worker-03.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-worker-03.sops.yml
@@ -1,23 +1,23 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:epM=,iv:KhQR3/zkU+d8cmWDPzjBo+rNBLFo5VIuSdPT9cVq/iA=,tag:j1kERFYrYm67GOD7A7+nkg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:peCSxQImGMELbyXWHcA=,iv:iBlFnjlx8z5nDqBcioRzYjRXj96Vy7XwcV81oOtCdsE=,tag:rA/g0m2TEMKvXteACSsdoA==,type:str]
+ansible_user: ENC[AES256_GCM,data:ZB4=,iv:2yErH26AV9be7byuIYoVPB5+V9TA1ayLPAVVxtm55wE=,tag:F6zsmfna5RoYdbIymBuO7w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:WVBT4xm2U7mJhdtSSWo=,iv:ivp1c+hWa+5Ee3j1gKU0bQlgpPs7QWgFAW7S6Xr22RY=,tag:4M0JnYZ44Y4iN6EP00d69Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age1vd5j7kge9c8w8t3aj3ekk4gp98fxhaqaptj224yl9aq3nekns30qneex5d
+        - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsaFJEYmNoelpaRVByMTd0
-            TFhXaE13dmV5Mzg3RGhpMmFsNGFQMWc4dGt3CnBDWTFNSy9uazFJWFB0QzRtdVFP
-            Tjd4WlFQanVEYW83VGNVTUI3eFJ2c2cKLS0tIFdpVXlsSWQ0Tk5ZaFNKSk9jaGx2
-            b1FSTXArWEdxcUgwZ05QZ3JLZFNCZVEKYdSo6Z5uO0jjDQ39ZUK5SdtCjt3FKA4X
-            vCO00uKNULs9iM2oo/UCnZ1jt9gMSIrfAiX+lDMyCILHb5HXXuHbgQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWU2ZNck8wandiWURQeVdG
+            d1kxSFZiRFpBdFFldnlaZ1hxdC9TenFueURZCnhPcFZkaFo2L1BOaGlFQktnZW5k
+            NU4rL0ZKVmc1YXpqcXdqM3FUMU5aZDQKLS0tIHhRZzhUOGFuY3JNakpGVmQxc2I3
+            NGRuWU0rOGpmUUZpQnhqdGdGZGptSzAK7HH1/f04SiBhAX8nLuTCgk9cimY1R9FF
+            OmzWF9IX/UzSfibdTl7gmdPpDNQoTt9lQ16QdobtVxfrNmSGDz9eqA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-05T23:53:05Z"
-    mac: ENC[AES256_GCM,data:UcMDKNN7mYDb09miSD5jT/Y+fXYFtQ4jIJVL3G3SXyIihFbuGuVnmOfFBxRaJA87LDJ6gRRy66UhNDqzn/nfT7VflT6mKNMomLPTZQBgJx8lNhGo01RallpV09BjM41GB7O3J1ScuekpRu8Sl4niabhl/hAtlhkg/dF3b6n9DR4=,iv:Ulr4itwnuGYW15QEcnRfsK2XUZA0uyj4ne3vUuOrJCM=,tag:ciDhXt9OLcWP5z73bGmA4g==,type:str]
+    lastmodified: "2022-06-09T18:55:22Z"
+    mac: ENC[AES256_GCM,data:E2uZCs3alRg86FiBOpLYdYre1NaTPNWiihRo4zJvMHmhkmGRR3o72Cmk/IsWoQje+MJrakStorR63/hamThr/p63i3EaovbNRQ5dGOGG5c8MXC3kVBZG155AEqbbjLvEO/NnlXF98dEgcqxfWo+cNn1aEW/fE4BcQHQVQGWHAxE=,iv:iGvEl3fOM50VF/A8d9AsB/fyXLVbtbOKnBrieajKxLw=,tag:W6ZrScuzy/JKyMrrWb5yVw==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
