--- a/provision/ansible/roles/ubuntu/tasks/packages.yml
+++ b/provision/ansible/roles/ubuntu/tasks/packages.yml
@@ -32,6 +32,27 @@
       - unzip
     install_recommends: false
 
+- name: Test for Raspbian
+  stat:
+    path: /boot/cmdline.txt
+  when: "'raspi' in ansible_kernel"
+
+- name: Activating cgroup on Raspbian
+  lineinfile:
+    path: /boot/cmdline.txt
+    regexp: '^(.*rootwait)$'
+    line: '\1 cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory'
+    backrefs: true
+  when:
+    - cmdline.stat.path is defined
+    - ansible_facts.architecture is search("arm")
+  register: boot_cmdline
+
+- name: Rebooting on Raspbian
+  reboot:
+  when:
+    - boot_cmdline is changed
+    - ansible_facts.architecture is search("arm")
 
 - name: Restart node if necessary
   ansible.builtin.meta: flush_handlers
