--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
           - networking
       name: "you"
       customApps:
-        - name: Some External Cluster Service
+        - name: Ladder CORP. 
           url: http://192.168.50.100:5000
           icon: test-tube
       groups:
