--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,11 +5,11 @@ on: # yamllint disable-line rule:truthy
   workflow_dispatch:
   pull_request:
     branches:
-      - main
+      - infra
 
 env:
 
-  DEFAULT_BRANCH: main
+  DEFAULT_BRANCH: infra
 
 jobs:
   build:
