--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,5 +1,5 @@
 {
-  "baseBranches": ["infra"],
+  "baseBranches": ["infra", "updatedSite"],
   "enabled": true,
   "semanticCommits": "enabled",
   "dependencyDashboard": true,
