--- a/cluster/apps/networking/cloudflare-ddns/secret.sops.yaml
+++ b/cluster/apps/networking/cloudflare-ddns/secret.sops.yaml
@@ -6,26 +6,6 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:YQbJOYHsuJ17vQoqwnOnX0CYV5E=,iv:x+pA4JMswfSEUNUz+xU1CH+sKSLzxb3L+MyCHLdhJk8=,tag:ZUtJgfmysbdx+tORAjsnAw==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:5WBS/pe+9Klh3t+ZBCVDj/5LzXhYbLgtqqEhSju01nKrkpOUnQ==,iv:MQFNGa8rvfiCzC+TNRWKyuMIiHyHP33YVrUlFyhkKWQ=,tag:QstNPwFBTwyWZFuiSoKOuA==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:KRUcyF/Gru8TOIWNuc2WQXxCS0Gj,iv:6vmz8daxSMNWLhAPDma2+B15Y3O1V1hPZ4BzDcR1DsY=,tag:oTmZodEhc9XbE0X6iNvy9w==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTeDFKWDAvTTJJVXNCMHZR
-            STBNSGZmSHhLVVd5eU9kVW5pRzhhUFBneUd3ClZ4TS96cTNHTFlsSjd5bzJPWi9C
-            c0wrRUxMWGsxRXhFLzV6YTJJcmJtS1EKLS0tIEpIZU4remE1WU1RSmRKKzNaMzZ6
-            dWtBUjN4V3lqdU1IUmJVN016WDFiUjAK1Vkmu4qn1qL2hLx/t3dBobtN8sLHdQK0
-            vA5SAuSm09c7OQHaL17zK9WOE4muL6uie2W2lVZ3j5J/udiw34RTbw==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-09T18:55:22Z"
-    mac: ENC[AES256_GCM,data:bqmCZvLxp5WprjdxLXLIU2mmlQQlSHNR1cOZ2VBiwUZTuHhD6nsMuSUlyoGgwZtdSyejsyRH1y/jP/TLDOlh6T4wwV3TXhH8b2sgCtjs/fLwSQWmiCqQb6uHLmAGHorIrupSdfE/U34PnGyxxq9Wrlx81MBLA+PxIv4ST2rT/k4=,iv:sa2vLyCKSnx5FTKlmSaJ1GF0L7Z5IeuIFG2RZDg10GQ=,tag:eYcWcWzLJ6ylhBT/yv83hg==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    CLOUDFLARE_EMAIL: mcclaren00@gmail.com
+    CLOUDFLARE_APIKEY: b6b61527306209ed709053926bc004c567e02
+    CLOUDFLARE_RECORD_NAME: icoolyousuck.com
