--- a/cluster/base/flux-system/gotk-sync.yaml
+++ b/cluster/base/flux-system/gotk-sync.yaml
@@ -11,7 +11,7 @@ spec:
     branch: infra
   secretRef:
     name: flux-system
-  url: ssh://git@github.com/mcclaren00/ladder-toolbox
+  url: https://github.com/mcclaren00/ladder-toolbox.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
