--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
       version: 1.2.0
       sourceRef:
         kind: HelmRepository
-        name: hajimari-charts
+        name: hajimari
         namespace: flux-system
       interval: 5m
   install:
@@ -34,20 +34,80 @@ spec:
           - networking
       name: "you"
       customApps:
-        - name: Ladder CORP. 
-          url: http://192.168.50.100:5000
+        - name: Some External Cluster Service
+          url: http://192.168.1.100:5000
           icon: test-tube
       groups:
         - name: Communicate
           links:
             - name: Discord
               url: "https://discord.com"
+            - name: Gmail
+              url: "https://gmail.com"
+            - name: Slack
+              url: "https://slack.com/signin"
+        - name: Cloud
+          links:
+            - name: Box
+              url: "https://box.com"
+            - name: Dropbox
+              url: "https://dropbox.com"
+            - name: Drive
+              url: "https://drive.google.com"
+        - name: Design
+          links:
+            - name: Awwwards
+              url: "https://awwwards.com"
+            - name: Dribbble
+              url: "https://dribbble.com"
+            - name: Muz.li
+              url: "https://medium.muz.li/"
+        - name: Dev
+          links:
+            - name: Codepen
+              url: "https://codepen.io/"
+            - name: Devdocs
+              url: "https://devdocs.io"
+            - name: Devhints
+              url: "https://devhints.io"
+        - name: Lifestyle
+          links:
+            - name: Design Milk
+              url: "https://design-milk.com/category/interior-design/"
+            - name: Dwell
+              url: "https://www.dwell.com/"
+            - name: Freshome
+              url: "https://www.mymove.com/freshome/"
+        - name: Media
+          links:
+            - name: Spotify
+              url: "http://browse.spotify.com"
+            - name: Trakt
+              url: "http://trakt.tv"
+            - name: YouTube
+              url: "https://youtube.com/feed/subscriptions"
+        - name: Reading
+          links:
+            - name: Instapaper
+              url: "https://www.instapaper.com/u"
+            - name: Medium
+              url: "http://medium.com"
+            - name: Reddit
+              url: "http://reddit.com"
+        - name: Tech
+          links:
+            - name: Hacker News
+              url: "https://news.ycombinator.com/"
+            - name: The Verge
+              url: "https://theverge.com/"
+            - name: MIT Technology Review
+              url: "https://www.technologyreview.com/"
     ingress:
       main:
         enabled: true
         ingressClassName: "traefik"
         annotations:
-          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          cert-manager.io/cluster-issuer: "letsencrypt-staging"
           hajimari.io/enable: "true"
           hajimari.io/icon: "weather-sunset"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
