--- a/cluster/apps/kube-system/reloader/helm-release.yaml
+++ b/cluster/apps/kube-system/reloader/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
       version: v0.0.114
       sourceRef:
         kind: HelmRepository
-        name: stakater-charts
+        name: stakater
         namespace: flux-system
       interval: 5m
   install:
