--- a/cluster/apps/system-upgrade/system-upgrade-controller/system-upgrade-patches.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/system-upgrade-patches.yaml
@@ -1,5 +1,7 @@
 ---
-# Namespace should alreaady exist may want to delete later
+# Namespace should already exist
+# Delete the system-upgrade namespace
+# from the kustomization
 $patch: delete
 apiVersion: v1
 kind: Namespace
