--- a/cluster/crds/traefik/crds.yaml
+++ b/cluster/crds/traefik/crds.yaml
@@ -8,7 +8,8 @@ spec:
   interval: 30m
   url: https://github.com/traefik/traefik-helm-chart.git
   ref:
-    tag: v10.19.5
+    # renovate: registryUrl=https://helm.traefik.io/traefik chart=traefik
+    tag: v10.20.1
   ignore: |
     # exclude all
     /*
