--- a/cluster/flux/apps.yaml
+++ b/cluster/flux/apps.yaml
@@ -2,23 +2,22 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: core
+  name: apps
   namespace: flux-system
 spec:
-  interval: 10m0s
-  dependsOn:
-    - name: crds
-  path: ./cluster/core
-  prune: false
+  interval: 10m
+  path: ./cluster/apps
+  prune: true
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: flux-cluster
+  dependsOn:
+    - name: core
   decryption:
     provider: sops
     secretRef:
       name: sops-age
   postBuild:
-    substitute: {}
     substituteFrom:
       - kind: ConfigMap
         name: cluster-settings
