--- a/provision/ansible/inventory/host_vars/k3s-master-01.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-master-01.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:oHM=,iv:WspRb0oTLF67vJ1c5LGTAWyKeXeGGZqKIXZfK5XXz1c=,tag:OiO4DwrMwq2JQtksADaHhg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:4RKW4zE4t3b+4Zqpup0=,iv:uuX37EdUcKSv05V7jUaYxObEcrmDJrmOwdC1kswzW24=,tag:IymGJ71u34uQvaq12M7lmA==,type:str]
+ansible_user: ENC[AES256_GCM,data:KRU=,iv:qzhYtgXGv/VXRRXkE3LvIj0D2I0Hj/Gd+wWZCcNS778=,tag:DR15mSaP2FGF7PCLYHfTLg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:WvW2LrhsujDvE25W59s=,iv:xwA1xI172IjWA7Ce7DCL7ekASMhxqkWr/+l/giQIuUo=,tag:E/shHBBmPFmj0SqWdzTpvA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwL25GNmNVcmgxRnB6UVZS
-            azIzL0RJT1NQLzRNODQwbVRkZWUzM29UVW1VCkhIdjJydkNmSXZ5SC9IOVF0QU1t
-            SXpOZU9aSkg2cXpGc3FkKys0TVVmb28KLS0tIDd4NVBEdmlYZVBibDRZc2lJeWhD
-            NGRYOEZLSlN5WWNZN2xCWnMrYVhIZ3cKcosMXJv5mLE0vtf6iQ1EpHFIaTbr333G
-            U/KSj6s17H7NtTtBBPIRiFtvqIGjCzzhOAtg87rm07NJPuiXYpObBg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYckd1ZCtBaDJNN3B5ZzF0
+            YUNKOG1YOE93T2E4aE16akoyTUNHMVNJZ1M4Cm02dlBzYlhCNC9DSC92L1oweW9h
+            WE1KeUF6dnorckNmMkpKYjhCREoxbzgKLS0tIG1XOC91emtFMmUyT0swR1VWaGhC
+            RjhLY2tsLzd1SnkrcmZqZjBMbjRKRjAKNYTr0THX9B/5caFjZQ+BKbQUTf93HBEG
+            8vH+/S6Wtgfgz4f9UpTUZNP1fqLyXWdAWsnfU1zx8FwUriT+i9BCkg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-09T18:55:22Z"
-    mac: ENC[AES256_GCM,data:sZaEBfNSSdz99RTIahaQ0sXNxDDfSiQIVg3O/tX7hB0VNRe3H8o5vjx3CV/jvUNvPpt8ZjEWed7q6YJ0s1DKvm2Ao6YbGr0ZTua3tEHf+axZ5ggIyXJDtjXVQWkDvL1Akd3dnzKQp5fa1UkTLM0W6xGC/y9avYftX/qyU3VwU28=,iv:UlXdtraB2tmmZLSphNqNPWRvKhboI/VztPl/pL9j8RA=,tag:qMzYe7JgAj8Zoqf1UiaYoA==,type:str]
+    lastmodified: "2022-06-13T04:04:32Z"
+    mac: ENC[AES256_GCM,data:RKVX9i+ahOLiprat+++MJTV+snp51OpAcPDbmCC7jYx4h6/RCR7cF3gfbgKwMvnNb9UiVz3UvR628s18of5So7CZVDVC1jdE7gNFzax8CrvsJozf3f1leGB5Wu4GTDR5FuYa/9t14zYtynCoySfIpE/e4qyvI8UpYkDmq/J+Etc=,iv:s9aE7BlL/WhoF46biFoW4vZAqpySlbJ65JC9sfiMuzE=,tag:j2mYLGJU6/jrXBZg7nELGg==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
