--- a/provision/ansible/inventory/host_vars/k3s-worker-01.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-worker-01.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:g3Q=,iv:YqYfDslLGR7VbTSFlpDmLfPOwnaOKTsJpNpLgYztb10=,tag:pXEPsBCn/7tIVEptiYVqqQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:p7K+GWjSEcAsKvcR0U0=,iv:iTDo5FSNH0ehtSi1GoNGmpKXRkaoruKMPnWev6OkyCE=,tag:4I8KVC7CiXipmU6aol6s7A==,type:str]
+ansible_user: ENC[AES256_GCM,data:bZU=,iv:wGpLpAsQ7Aa3H59q3lssycbXa8crGYrAiRSCfMayDBo=,tag:6bqjp7ylh9I82ONd8quK9Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:Je/GuEas9M/VyNEF0CE=,iv:JOVuLuZG3wzjGbf6U9Lx8lj6kqmI2Df6LRJzDqnBCnw=,tag:Si+sXEmOTiqUWiS4H8E4Fw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsbTZiQ3dENFlVNzJMZGMw
-            N2VLK1RlNzU3K3hTNjdTZmtKZVlMQlltemdJClJmTnNuT0EyeFhKNmhzYjAxZDEz
-            WVRRNWlQaWw0L3V5UVZudHlocUNVUlkKLS0tIFVFb2tsa21YZ0h0NmorSkFWRzRH
-            c3VCOUhwWGlqMzA5M1JQYVZ3OUNWbmsKFZwiPleeIDwLOVB2DrylY5QQd8VnUkxt
-            bv9xk3D1aFW0g+UNzdlmRDrMqTenvrEss8xWdLGqcReIRVi30RPnsA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3ZkdYMmYzMTZxNytlb0o0
+            UUlqNlFtbEZ3aEVaRFJxeXRGUjg0a3N3U0dNClg1OVlyMmUxN1U2UWI4VFR6YS9j
+            d0cydjIzdWNoVjBySjdxMjZYU1RNNmcKLS0tIHowZ0w0blBFanl4WUxJblBtWnJt
+            UXd6Yi91NDZIUXplSE1WNWtNZjNlTFkKYD+iz8n8Fwd9um+GH3Z8UPinQjSc35o3
+            cltXFeWfLh0yvpNr7g4KSwRMi4skUcpn0sQ5WuU9TZt3DH6MAPMEKg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-09T18:55:22Z"
-    mac: ENC[AES256_GCM,data:ndD2OF8pPhzQBEF8Ys3F7hx6asB0H1/lz0KJi9bBYN9tkjYp7Q0vm+e593qDf5BQ/Ou+ray7rPWN7zmB4SbiTWsTnG2iSxUGLsEBdDS7ortqWnLVIBCEd7hbJhpZ9vbB3QpDLrJiEOSQC5z/chSpNo73BbZSIypiP4wC5mRSOJg=,iv:d3qxq2VCKdDhqqwenG87j9e+8cleOLlyXf5vBB3vERE=,tag:064nFIw4zm2OkXrKKQxV0A==,type:str]
+    lastmodified: "2022-06-13T04:04:32Z"
+    mac: ENC[AES256_GCM,data:piJ988bkA1ycZyqq8q+C1DQFG5+l/UuguXbYlOYjR+ehVDDlWunwUXGa/ZmYnGnQ+Q3Sc9wLsRSuvP/GQONbwH8mMKYW12v3PAW6KXB8QhbVRY54Z2tJG+6H2suAa8+//J5xXoIZCcWY+3Fh858B/xw55N/zlcNtrrkXT64gXTs=,iv:Z4ZSUwexrivyHufoOzZdsElikc/kZ9G5uFrKmFeeAiQ=,tag:XeORMfcoETXdpnOQpdmRYg==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
