--- a/provision/ansible/inventory/host_vars/k3s-worker-02.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-worker-02.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:u/0=,iv:kcwyDucWKsi5bIBPpvpO8vHn8WBdcSEYa9S0Gr4GBGw=,tag:5ePJRXboak2X+nHAsIKtyA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:Sreq2hekPl+lbV7EtbA=,iv:S1F8BVYNXI90Mp8Ja4/34EOTKyBmj73QYwnbIwjjoM4=,tag:N5YqjUOxGaGX5e7j/zvTSQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:K/Q=,iv:ZSZLE5bNUa0wP8fi+U2oDHEp+JBJ7hQPABSGeVK0eC4=,tag:p7UsinIYN4i/cKmD00AdJg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:yMvZswVYRnLgLE3e4eY=,iv:l7N6HVszyQ7NBwt8pQkSA4KGAceEx8Yl0rAPnaa6Azw=,tag:d2gAZBfYD+W88ukHfovsjg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0eXluY3A1ZWVTb3RNaXBK
-            TzFLQkR6dUZTSjkzQm1lZ1NuYitDNktKVEdzCk11SGt5cHJIVVlCeUpBcW9UTUZY
-            bmNqSEU4MlFhVm9XdjFwZUUzYW5vKzgKLS0tIHdZVkxoQ0pCdXFMWWNxWG11UVFQ
-            Vjk3cXNZNGc2cnZNOW9UZUp2S1huSE0KPivlKS/c6Xf5i9IwS7hpxAb/h6r8G2b6
-            jo1tz8It5uFwqyAcZrWrgHgZqgrdfv9lItdAYQ5wppm1sJ42LehkCQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLN0djalYwS0ZJNXhqaFJE
+            TTFya2VEdEROSEF0SGkvSlRrQ09vSGR1WFdFCml4QmhjVmd4UjN4bkthZWNBVVBK
+            Y3kvejRmc0RqdVkveldHQktJV0RZZEUKLS0tIEdwVlYyMFVUZDRRenNxVDhDSmc3
+            VmFOaE1vbkxGTWh4bitKUmdIWlNhbk0KACkK2ObCyoYCq43Y9+mOmtsfRYJqoqau
+            V8nYEB3eNHpky5d8U0IK93g8nR6xg/QVNbbKrr3uC+s3a5eSQO5auQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-09T18:55:22Z"
-    mac: ENC[AES256_GCM,data:f+lIDdV/cCExm/nDKHcKDPDvsKP/umUYO1MG5Yq08fFVKXZlrRUql+lIZCW1m9LrdiSjOWSlzg/PMhMiuEgTwXSMy5+1oasYoe+VfL7EFzSXuLz6BCVvZofJsU1uluKmKq8xa7pN9fCgyP/SOIzKRY2lxhWFCtEdXwkb8WduSsk=,iv:7PfcuaaAd4TvlPp1yIPk+puPSx4/1yiIa9gtuOkcl1c=,tag:pQXaffXyczp51tY4EpbhYw==,type:str]
+    lastmodified: "2022-06-13T04:04:32Z"
+    mac: ENC[AES256_GCM,data:7AFWJvZuCPvTdiO1Ge5BkAQVYXSh8CxjTKQSB9wh0YvPr8Wt4Ig/k8SXxqQs6p33P2gu2TKb3EtS1SR+lUmv2QWPx47TNskFPW5O2mej8+bMi9z+jBoEJ0leT1BNJlNUPtIi6JnjWZ7ggD0evlqgiA+j9cUNGu8avQKoAD28pbI=,iv:RL7uzP/j4WfWhsNkFKOwT2dxbBMEmqbikpD2GSxKwiM=,tag:ziFZtHyjhsHcvrhsg/j+GQ==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
