--- a/provision/ansible/inventory/host_vars/k3s-worker-03.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-worker-03.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:ZB4=,iv:2yErH26AV9be7byuIYoVPB5+V9TA1ayLPAVVxtm55wE=,tag:F6zsmfna5RoYdbIymBuO7w==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:WVBT4xm2U7mJhdtSSWo=,iv:ivp1c+hWa+5Ee3j1gKU0bQlgpPs7QWgFAW7S6Xr22RY=,tag:4M0JnYZ44Y4iN6EP00d69Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:2pU=,iv:TYO7jAgh6P9cXer8ODbzqtWhrTMckbQEBQWu+gTCNPw=,tag:f0B9Bj4/gu4aueVZwg07MA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:3OvODR6QKwihILGM4as=,iv:G7hFyPTpvEn15zSvGWuGMksDQtXiKDJahsGVqE2SAtE=,tag:8Ix+Zl2At6ekaNpS9gZ6cQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1m3hvf7e58692g982nvz4zul9f2ck5azhnfjzr3pngj4esv532c9q022x5u
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWU2ZNck8wandiWURQeVdG
-            d1kxSFZiRFpBdFFldnlaZ1hxdC9TenFueURZCnhPcFZkaFo2L1BOaGlFQktnZW5k
-            NU4rL0ZKVmc1YXpqcXdqM3FUMU5aZDQKLS0tIHhRZzhUOGFuY3JNakpGVmQxc2I3
-            NGRuWU0rOGpmUUZpQnhqdGdGZGptSzAK7HH1/f04SiBhAX8nLuTCgk9cimY1R9FF
-            OmzWF9IX/UzSfibdTl7gmdPpDNQoTt9lQ16QdobtVxfrNmSGDz9eqA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLcGFOVy9GOElCbm5IRXVL
+            eVc5UG1JaEFUWjBWTzVEWkkvUWNPZWZtaXdrCitXL3ZrbE54aWVSY05wS09LUTg0
+            UGRwUVJaNHUrZDFZVjlKQWNqQ0taaXcKLS0tIEJIQWdSenRZWGJWd05MdU1BOFFX
+            Y2NiZjZmY3o5NXFNS1FLUWNndGdMc1kKA4aENq9tOh+vFQy5Y5xXy/vKA9+B5isq
+            r+SXJ8W2HiE+o/6Fow9QL9FsNZ/uwu2D3pKLxeXme1ivdM6h/SKL1A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-09T18:55:22Z"
-    mac: ENC[AES256_GCM,data:E2uZCs3alRg86FiBOpLYdYre1NaTPNWiihRo4zJvMHmhkmGRR3o72Cmk/IsWoQje+MJrakStorR63/hamThr/p63i3EaovbNRQ5dGOGG5c8MXC3kVBZG155AEqbbjLvEO/NnlXF98dEgcqxfWo+cNn1aEW/fE4BcQHQVQGWHAxE=,iv:iGvEl3fOM50VF/A8d9AsB/fyXLVbtbOKnBrieajKxLw=,tag:W6ZrScuzy/JKyMrrWb5yVw==,type:str]
+    lastmodified: "2022-06-13T04:04:32Z"
+    mac: ENC[AES256_GCM,data:Mp5gkT3k6iHuNWegASvPZ+k0kFo5RzcCWdyOXhI6kTNpBCBRGJxlcsbzHSlIBQS/xK3AQ7o6LOo6fHRqTttJaaaPvfGUEvFmmpySnZrCHLyC/Uu0qcp59oIpxAIgY2TO16Vfmbk6693C7hrQ3RpW5VMl2xq44X540oc2UDOTWUo=,iv:H6TdYkJSDRJsMG94+2KHlsYszxK/fKv0u9GRmvyhENg=,tag:QUlf47VenyIzMD8msbERtw==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
