--- a/cluster/charts/botkube.yaml
+++ b/cluster/charts/botkube.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://github.com/infracloudio/botkube/tree/develop/helm/botkube
+  url: https://github.com/infracloudio/charts
