--- a/cluster/charts/infracloudio.yaml
+++ b/cluster/charts/infracloudio.yaml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: infracloudio-charts
-  namespace: monitoring
+  namespace: flux-system
 spec:
   interval: 1h
   url: https://infracloudio.github.io/charts 
