--- a/cluster/apps/monitoring/botkube/helm-release.yaml
+++ b/cluster/apps/monitoring/botkube/helm-release.yaml
@@ -13,7 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: infracloudio-charts
-        namespace: flux-system
+        namespace: monitoring
       interval: 5m
   values:
     image:
