--- a/.taskfiles/ClusterTasks.yml
+++ b/.taskfiles/ClusterTasks.yml
@@ -3,24 +3,24 @@ version: "3"
 
 tasks:
 
-  flux:verify:
-    desc: check flux reqirements
+  verify:
+    desc: Verify flux meets the prerequisites
     cmds:
       - flux check --pre
 
-  flux:install:
-  desc: Install Flux into your cluster
-  cmds:
-    - kubectl apply --kustomize {{.CLUSTER_DIR}}/bootstrap/
-    - cat {{.SOPS_AGE_KEY_FILE}} | kubectl -n flux-system create secret generic sops-age --from-file=age.agekey=/dev/stdin
-    - kubectl apply --kustomize {{.CLUSTER_DIR}}/flux/flux-system/
-    - task: reconcile
-  preconditions:
-    - sh: test -f {{.SOPS_AGE_KEY_FILE}}
-      msg: |
-        Age key file is not found. Did you forget to create it?
-  vars:
-    SOPS_AGE_KEY_FILE: ~/.config/sops/age/keys.txt
+  install:
+    desc: Install Flux into your cluster
+    cmds:
+      - kubectl apply --kustomize {{.CLUSTER_DIR}}/bootstrap/
+      - cat {{.SOPS_AGE_KEY_FILE}} | kubectl -n flux-system create secret generic sops-age --from-file=age.agekey=/dev/stdin
+      - kubectl apply --kustomize {{.CLUSTER_DIR}}/flux/flux-system/
+      - task: reconcile
+    preconditions:
+      - sh: test -f {{.SOPS_AGE_KEY_FILE}}
+        msg: |
+          Age key file is not found. Did you forget to create it?
+    vars:
+      SOPS_AGE_KEY_FILE: ~/.config/sops/age/keys.txt
 
   reconcile:
     desc: Force update Flux to pull in changes from your Git repository
@@ -29,43 +29,43 @@ tasks:
       - flux reconcile -n flux-system kustomization flux-cluster
 
   nodes:
-    desc: Get all nodes
+    desc: List all the nodes in your cluster
     cmds:
       - kubectl get nodes {{.CLI_ARGS | default "-o wide"}}
 
   pods:
-    desc: get all pods
+    desc: List all the pods in your cluster
     cmds:
       - kubectl get pods {{.CLI_ARGS | default "-A"}}
 
   kustomizations:
-    desc: list all kustomizations in cluster
+    desc: List all the kustomizations in your cluster
     cmds:
       - kubectl get kustomizations {{.CLI_ARGS | default "-A"}}
 
   helmreleases:
-    desc: list all helm relases
+    desc: List all the helmreleases in your cluster
     cmds:
       - kubectl get helmreleases {{.CLI_ARGS | default "-A"}}
 
   helmrepositories:
-    desc: list all helm relases
+    desc: List all the helmreleases in your cluster
     cmds:
       - kubectl get helmrepositories {{.CLI_ARGS | default "-A"}}
 
   gitrepositories:
-    desc: list all helm relases
+    desc: List all the helmreleases in your cluster
     cmds:
       - kubectl get gitrepositories {{.CLI_ARGS | default "-A"}}
 
   certificates:
-    desc: list all the certificates in cluster
+    desc: List all the certificates in your cluster
     cmds:
       - kubectl get certificates {{.CLI_ARGS | default "-A"}}
       - kubectl get certificaterequests {{.CLI_ARGS | default "-A"}}
 
   resources:
-    desc: get all resources in cluster
+    desc: Gather common resources in your cluster, useful when asking for support
     cmds:
       - task: nodes
       - task: kustomizations
