--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,76 +1,83 @@
 ---
 version: "3"
 
+vars:
+  PROJECT_DIR:
+    sh: "git rev-parse --show-toplevel"
+  CLUSTER_DIR: "{{.PROJECT_DIR}}/cluster"
+  ANSIBLE_DIR: "{{.PROJECT_DIR}}/provision/ansible"
+  TERRAFORM_DIR: "{{.PROJECT_DIR}}/provision/terraform"
+  HACK_DIR: "{{.PROJECT_DIR}}/setup"
+
+dotenv: [".config.env"]
+
+env:
+  KUBECONFIG: "{{.PROJECT_DIR}}/provision/kubeconfig"
+
+includes:
+  ansible: .taskfiles/AnsibleTasks.yml
+  cluster: .taskfiles/ClusterTasks.yml
+  precommit: .taskfiles/PrecommitTasks.yml
+  terraform: .taskfiles/TerraformTasks.yml
+  hack: .taskfiles/HackTasks.yml
+
 tasks:
 
-  verify:
-    desc: Verify flux meets the prerequisites
+  init:
+    desc: Install dependancies through brew
     cmds:
-      - flux check --pre
-
-  install:
-    desc: Install Flux into your cluster
-    cmds:
-      - kubectl apply --kustomize {{.CLUSTER_DIR}}/bootstrap/
-      - cat {{.SOPS_AGE_KEY_FILE}} | kubectl -n flux-system create secret generic sops-age --from-file=age.agekey=/dev/stdin
-      - kubectl apply --kustomize {{.CLUSTER_DIR}}/flux/flux-system/
-      - task: reconcile
+      - brew install {{.DEPS}} {{.CLI_ARGS}}
     preconditions:
-      - sh: test -f {{.SOPS_AGE_KEY_FILE}}
-        msg: |
-          Age key file is not found. Did you forget to create it?
+      - sh: command -v brew
+        msg: install homebrew
     vars:
-      SOPS_AGE_KEY_FILE: ~/.config/sops/age/keys.txt
+      DEPS: >-
+        age
+        ansible
+        direnv
+        fluxcd/tap/flux
+        gitleaks
+        go-task/tap/go-task
+        helm
+        ipcalc
+        jq
+        kubernetes-cli
+        kustomize
+        pre-commit
+        prettier
+        sops
+        stern
+        terraform
+        yamllint
+        yq
+        k3sup
+        gcc
+        go
 
-  reconcile:
-    desc: Force update Flux to pull in changes from your Git repository
+  workstation:
+    desc: Install dependancies, for workstations through brew
     cmds:
-      - flux reconcile -n flux-system source git flux-cluster
-      - flux reconcile -n flux-system kustomization flux-cluster
+      - brew install {{.DEPS}} {{.CLI_ARGS}}
+    preconditions:
+      - sh: command -v brew
+        msg: install homebrew
+    vars:
+      DEPS: >-
+        direnv
+        gitleaks
+        go-task/tap/go-task
+        pre-commit
+        prettier
+        yamllint
+        gcc
+        go
 
-  nodes:
-    desc: List all the nodes in your cluster
+  verify:
+    desc: Verify env settings
     cmds:
-      - kubectl get nodes {{.CLI_ARGS | default "-o wide"}}
+      - ./configure --verify
 
-  pods:
-    desc: List all the pods in your cluster
+  configure:
+    desc: Configure repository from env settings
     cmds:
-      - kubectl get pods {{.CLI_ARGS | default "-A"}}
-
-  kustomizations:
-    desc: List all the kustomizations in your cluster
-    cmds:
-      - kubectl get kustomizations {{.CLI_ARGS | default "-A"}}
-
-  helmreleases:
-    desc: List all the helmreleases in your cluster
-    cmds:
-      - kubectl get helmreleases {{.CLI_ARGS | default "-A"}}
-
-  helmrepositories:
-    desc: List all the helmreleases in your cluster
-    cmds:
-      - kubectl get helmrepositories {{.CLI_ARGS | default "-A"}}
-
-  gitrepositories:
-    desc: List all the helmreleases in your cluster
-    cmds:
-      - kubectl get gitrepositories {{.CLI_ARGS | default "-A"}}
-
-  certificates:
-    desc: List all the certificates in your cluster
-    cmds:
-      - kubectl get certificates {{.CLI_ARGS | default "-A"}}
-      - kubectl get certificaterequests {{.CLI_ARGS | default "-A"}}
-
-  resources:
-    desc: Gather common resources in your cluster, useful when asking for support
-    cmds:
-      - task: nodes
-      - task: kustomizations
-      - task: helmreleases
-      - task: helmrepositories
-      - task: gitrepositories
-      - task: certificates
-      - task: pods
+      - ./configure
