--- a/cluster/apps/networking/cloudflare-ddns/cron-job.yaml
+++ b/cluster/apps/networking/cloudflare-ddns/cron-job.yaml
@@ -9,6 +9,7 @@ spec:
   concurrencyPolicy: "Forbid"
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 5
+  # automountServiceAccountToken: false
   jobTemplate:
     spec:
       backoffLimit: 3
