--- a/cluster/apps/monitoring/botkube/helm-release.yaml
+++ b/cluster/apps/monitoring/botkube/helm-release.yaml
@@ -18,7 +18,7 @@ spec:
       interval: 5m
   values:
     image:
-      repository: botkube
+      repository: infracloudio/botkube
       tag: latest
     serviceMonitor:
       enabled: true
