--- a/cluster/apps/monitoring/botkube/helm-release.yaml
+++ b/cluster/apps/monitoring/botkube/helm-release.yaml
@@ -6,39 +6,56 @@ metadata:
   namespace: monitoring
 spec:
   interval: 5m
-  timeout: "60"
   chart:
     spec:
+      # renovate: registryUrl=https://infracloudio.github.io/charts
       chart: botkube
-      version: v0.12.2
       sourceRef:
         kind: HelmRepository
         name: infracloudio-charts
-        namespace: monitoring
+        namespace: flux-system
       interval: 5m
   values:
-    image:
-      repository: infracloudio/botkube
-      tag: latest
     serviceMonitor:
       enabled: true
     config:
+      recommendations: false
       settings:
-        clustername: k3s
+        clustername: tron 
+        kubectl:
+          enabled: true
+          restrictAccess: true
+          commands:
+            verbs:
+              [
+                "api-resources",
+                "api-versions",
+                "cluster-info",
+                "describe",
+                "diff",
+                "explain",
+                "get",
+                "logs",
+                "top",
+                "auth",
+              ]
+            resources:
+              [
+                "deployments",
+                "pods",
+                "namespaces",
+                "daemonsets",
+                "statefulsets",
+                "storageclasses",
+                "nodes",
+              ]
       resources:
-        - name: v1/pods                # Name of the resources e.g pod, deployment, ingress, etc. (Resource name must be in singular form)
-          namespaces:
-            include:
-              - all
-            ignore:                 # List of namespaces to be ignored (omitempty), used only with include: all
-              - kube-system
-          events:                   # List of lifecycle events you want to receive, e.g create, update, delete, error OR all
-            - create
-            - delete
         - name: v1/services
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
             - create
             - delete
@@ -47,32 +64,40 @@ spec:
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
             - create
             - update
             - delete
             - error
           updateSetting:
-            includeDiff: true
-            fields:
-              - spec.template.spec.containers[*].image
+          includeDiff: true
+          fields:
+            - spec.template.spec.containers[*].image
+            - status.availableReplicas
         - name: apps/v1/statefulsets
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
             - create
             - update
             - delete
             - error
           updateSetting:
-            includeDiff: true
-            fields:
-              - spec.template.spec.containers[*].image
+          includeDiff: true
+          fields:
+            - spec.template.spec.containers[*].image
+            - status.readyReplicas
         - name: networking.k8s.io/v1beta1/ingresses
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
             - create
             - delete
@@ -81,6 +106,8 @@ spec:
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
             - create
             - delete
@@ -89,6 +116,8 @@ spec:
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
             - create
             - delete
@@ -97,6 +126,8 @@ spec:
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
             - create
             - delete
@@ -105,14 +136,8 @@ spec:
           namespaces:
             include:
               - all
-          events:
-            - create
-            - delete
-            - error
-        - name: v1/secrets
-          namespaces:
-            include:
-              - all
+            ignore:
+              - 
           events:
             - create
             - delete
@@ -121,58 +146,37 @@ spec:
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
+            - create
             - delete
             - error
         - name: apps/v1/daemonsets
           namespaces:
             include:
               - all
+            ignore:
+              - 
           events:
             - create
             - delete
             - error
-            - update
-          updateSetting:
-            includeDiff: true
-            fields:
-              - spec.template.spec.containers[*].image
         - name: batch/v1/jobs
           namespaces:
             include:
               - all
             ignore:
-              - kube-system
+              - 
           events:
-            - create
             - update
-            - delete
-            - error
-          updateSetting:
-            includeDiff: true
-            fields:
-              - spec.template.spec.containers[*].image
-              - status.conditions[*].type
-        - name: rbac.authorization.k8s.io/v1/roles
-          namespaces:
-            include:
-              - all
-          events:
-            - create
-            - delete
             - error
         - name: rbac.authorization.k8s.io/v1/rolebindings
           namespaces:
             include:
               - all
-          events:
-            - create
-            - delete
-            - error
-        - name: rbac.authorization.k8s.io/v1/clusterroles
-          namespaces:
-            include:
-              - all
+            ignore:
+              - 
           events:
             - create
             - delete
@@ -181,11 +185,50 @@ spec:
           namespaces:
             include:
               - all
+            ignore:
+              - 
+          events:
+            - create
+            - delete
+            - error
+        - name: rbac.authorization.k8s.io/v1/clusterroles
+          namespaces:
+            include:
+              - all
+            ignore:
+              - 
+          events:
+            - create
+            - delete
+            - error
+        - name: v1/nodes
+          namespaces:
+            include:
+              - all
+            ignore:
+              -
           events:
             - create
             - delete
             - error
     communications:
-      webhook:
+      discord:
         enabled: true
-        url: "https://discord.com/api/webhooks/979882588929941604/o_HXdDnqpGhQRi-TO1TEZ5AaPk2ZhW8xcq2rcqWsqgoJcjZYxAutVdvVmwBDuD1a15MZ" 
+        notiftype: short
+
+  valuesFrom:
+    - kind: Secret
+      name: botkube
+      valuesKey: discord-token
+      targetPath: communications.discord.token
+      optional: false
+    - kind: Secret
+      name: botkube
+      valuesKey: discord-botid
+      targetPath: communications.discord.botid
+      optional: false
+    - kind: Secret
+      name: botkube
+      valuesKey: discord-channel
+      targetPath: communications.discord.channel
+      optional: false
