--- a/cluster/apps/monitoring/botkube/secret.sops.yaml
+++ b/cluster/apps/monitoring/botkube/secret.sops.yaml
@@ -6,7 +6,8 @@ data:
 kind: Secret
 metadata:
     creationTimestamp: null
-    name: discord
+    name: botkube
+    namespace: monitoring
 sops:
     kms: []
     gcp_kms: []
