--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,14 +1,14 @@
 ---
 name: Lint
 
-on: # yamllint disable-line rule:truthy
+on:
   workflow_dispatch:
   pull_request:
     branches:
       - infra
+      - siteV2
 
-env:
-
+env: 
   DEFAULT_BRANCH: infra
 
 jobs:
@@ -27,5 +27,6 @@ jobs:
           DEFAULT_BRANCH: "${{ env.DEFAULT_BRANCH }}"
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           ANSIBLE_CONFIG_FILE: .ansible-lint
+          MARKDOWN_CONFIG_FILE: .markdownlint.yaml
           YAML_CONFIG_FILE: .yamllint.yaml
           KUBERNETES_KUBEVAL_OPTIONS: --ignore-missing-schemas
