--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -27,13 +27,13 @@ spec:
     alertmanager:
       config:
         global:
-          slack_api_url: "$"
+          # slack_api_url: ""
           resolve_timeout: 5m
         receivers:
           - name: "null"
           - name: "discord"
             slack_configs:
-              - channel: "#k3s"
+              - channel: "#alerts"
                 icon_url: https://avatars3.githubusercontent.com/u/3380462
                 username: "Prometheus"
                 send_resolved: true
