--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
     alertmanager:
       config:
         global:
-          # slack_api_url: ""
+          slack_api_url: "$discord-webhook"
           resolve_timeout: 5m
         receivers:
           - name: "null"
