--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,7 @@
-FROM node
+FROM  node:12.18.1
+ENV NODE_ENV=production
 WORKDIR /app
-COPY package.json .
-RUN npm install 
+COPY ["package.json", "package-lock.json*", "./"]
+RUN npm install --production
 COPY . .
-EXPOSE 3000
-CMD [ "npm", "run", "start" ]
-
+CMD [ "node", "server.js" ]
