--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
 RUN npm install --production
 COPY . .
-CMD [ "node", "server.js" ]
+CMD [ "node", "run", "start" ]
