--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,10 @@
-FROM node:16.14
+FROM node:16.14-alpine
 # ENV NODE_ENV=production
-WORKDIR /app
-COPY ["package.json", "package-lock.json*", "./"]
+WORKDIR /client
+ENV PATH="./node_modules/.bin:$PATH"
+# COPY ["package.json", "package-lock.json*", "./"]
 # RUN npm install --production
-RUN npm install
+# RUN npm install
 COPY . .
+RUN npm run build 
 CMD [ "node", "run", "start" ]
