--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -19,7 +19,7 @@ includes:
   cluster: .taskfiles/ClusterTasks.yml
   precommit: .taskfiles/PrecommitTasks.yml
   terraform: .taskfiles/TerraformTasks.yml
-  hack: .taskfiles/HackTasks.yml
+  # hack: .taskfiles/HackTasks.yml
 
 tasks:
 
