--- a/cluster/apps/ladder/ladder-ingress.yaml
+++ b/cluster/apps/ladder/ladder-ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-staging
-    # hajimari.io/enable: "true"
+    hajimari.io/enable: "true"
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.middlewares: networking-internal-only@kubernetescrd
   creationTimestamp: {}
@@ -17,11 +17,11 @@ spec:
       paths:
       - backend:
           service:
-            name: ladder
+            name: ladder-client
             port:
               number: 3000
-        path: /
-        pathType: Prefix
+        # path: /
+        # pathType: Prefix
   tls:
   - hosts:
     - icoolyousuck.com
