--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ladder-toolbox",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "upload.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/mcclaren00/ladder-toolbox/issues"
   },
-  "homepage": "https://github.com/mcclaren00/ladder-toolbox#readme"
+  "homepage": "https://github.com/mcclaren00/ladder-toolbox#readme",
+  "dependencies": {
+    "ipfs-cluster-api": "^0.0.9"
+  }
 }
