--- a/cluster/flux/flux-system/flux-cluster.yaml
+++ b/cluster/flux/flux-system/flux-cluster.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   interval: 10m
   ref:
-    branch: infra
+    branch: production/infra
   url: https://github.com/mcclaren00/ladder-toolbox
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
