--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -1,93 +1,68 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: traefik
   namespace: networking
 spec:
-  interval: 5m
+  maxHistory: 3
+  interval: 5m0s
+  suspend: false
+  releaseName: traefik
   chart:
     spec:
       chart: traefik
-      version: 10.20.1
+      version: 9.12.3
       sourceRef:
         kind: HelmRepository
         name: traefik
         namespace: flux-system
-      interval: 5m
-  dependsOn:
-    - name: cert-manager
-      namespace: cert-manager
-  install:
-    createNamespace: true
-    remediation:
-      retries: 3
-  upgrade:
-    remediation:
-      retries: 3
   values:
-    deployment:
-      kind: Deployment
-      replicas: 1
-    service:
-      enabled: true
-      type: LoadBalancer
-      annotations:
-        metallb.universe.tf/loadBalancerIPs: |-
-          ${METALLB_TRAEFIK_ADDR}
-      spec:
-        externalTrafficPolicy: Local
-    logs:
-      general:
-        format: json
-        level: DEBUG
-      access:
-        enabled: true
-        format: json
+    image:
+      repository: traefik
+      tag: 2.3.7
+      pullPolicy: IfNotPresent
+    env:
+    - name: TZ
+      value: Europe/London
+    installCRDs: true
     ingressClass:
       enabled: true
-      isDefaultClass: true
-      fallbackApiVersion: v1
+      isDefaultClass: "true"
     ingressRoute:
       dashboard:
-        enabled: false
+        enabled: true
     globalArguments:
-      - "--api.insecure=true"
-      - "--serverstransport.insecureskipverify=true"
-      - "--providers.kubernetesingress.ingressclass=traefik"
-      - "--metrics.prometheus=true"
-      - "--metrics.prometheus.entryPoint=metrics"
-      - "--entryPoints.websecure.forwardedHeaders.trustedIPs=10.0.0.0/8,192.168.0.0/16,172.16.0.0/12,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,104.16.0.0/13,104.24.0.0/14,108.162.192.0/18,131.0.72.0/22,141.101.64.0/18,162.158.0.0/15,172.64.0.0/13,173.245.48.0/20,188.114.96.0/20,190.93.240.0/20,197.234.240.0/22,198.41.128.0/17,2400:cb00::/32,2606:4700::/32,2803:f800::/32,2405:b500::/32,2405:8100::/32,2a06:98c0::/29,2c0f:f248::/32"
-    additionalArguments:
-      - "--providers.kubernetesingress.ingressendpoint.ip=${METALLB_TRAEFIK_ADDR}"
-      - "--providers.kubernetesingress.allowexternalnameservices=true"
-      - "--providers.kubernetescrd.allowexternalnameservices=true"
+    - --global.checknewversion=false
+    - --global.sendanonymoususage=false
+    - --api.insecure=true
+    - --accesslog=true
+
     ports:
       traefik:
         expose: true
+        port: 9000
+        protocol: TCP
       web:
-        redirectTo: websecure
-      websecure:
-        tls:
-          enabled: true
-          options: "default"
-      metrics:
-        port: 8082
         expose: true
-        exposedPort: 8082
-    tlsOptions:
-      default:
-        minVersion: VersionTLS12
-        maxVersion: VersionTLS13
-        sniStrict: true
+        exposedPort: 80
+        port: 8000
+        protocol: TCP
+      websecure:
+        expose: true
+        exposedPort: 443
+        port: 8443
+        protocol: TCP
+    service:
+      enabled: true
+      type: LoadBalancer
+      spec:
+        loadBalancerIP: 10.10.20.50
+        externalTrafficPolicy: Local
+    dnsPolicy: ClusterFirst
+    logs:
+      general:
+        level: INFO
+      access:
+        enabled: true
     pilot:
       enabled: false
-    experimental:
-      plugins:
-        enabled: false
-    resources:
-      requests:
-        memory: 100Mi
-        cpu: 500m
-      limits:
-        memory: 500Mi
